--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-.square {
-  margin: 0 auto;
+.container {
   width: 500px;
-  height: 500px;
-  background-color: rgb(219, 222, 227);
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header__chek {
+  width: 100px;
+  height: 60px;
+  /* border: 6px solid black; */
+  background: #bbada0;
+  border-radius: 5px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  transition: 1s;
+}
+.header__chek p {
+  padding: 6px;
+  margin: 0;
+  font-size: 14px;
+  color: #dfd5cb;
+}
+
+.header__chek div {
+  font-size: 20px;
+}
+.restart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8f7a66;
+}
+
+#restart__btn {
+  font-size: 16px;
+}
+
+.restart:hover {
+  background-color: #cdbfb2;
+}
+
+.square {
+  /* position: relative; */
+  width: 500px;
+  /* height: 500px; */
+  background: #bbada0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
-  padding: 4px;
+  padding: 10px;
+  border-radius: 10px;
+}
+.you__win {
+  position: absolute;
+  width: 520px;
+  height: 450px;
+  border: 1px solid black;
+  background-color: rgba(120, 99, 99, 0.81);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.you__win h2 {
+  font-size: 50px;
+  color: white;
+}
+h1 {
+  font-size: 50px;
+  color: #bbada0;
+}
+
+.hide {
+  display: none;
 }
 .row {
   display: grid;
@@ -18,11 +93,74 @@
 }
 
 .cell {
+  color: #f9f6f2;
+  font-weight: 900;
+  font-size: 60px;
   padding: 10px;
-  font-size: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(239, 64, 64, 0.5);
+  background: rgba(238, 228, 218, 0.35);
   border-radius: 5px;
+}
+
+.cell-2 {
+  background: #eee4da;
+  color: #776e65;
+  transition: 1s;
+}
+.cell-4 {
+  background: #eee1c9;
+  color: #776e65;
+  transition: 1s;
+}
+
+.cell-8 {
+  background: #f3b27a;
+  color: #ffffff;
+  transition: 1s;
+}
+
+.cell-16 {
+  background: #f69664;
+  transition: 1s;
+}
+
+.cell-32 {
+  background: #f77c5f;
+  transition: 1s;
+}
+
+.cell-64 {
+  background: #f75f3b;
+  transition: 1s;
+}
+
+.cell-128 {
+  background: #edd073;
+  transition: 1s;
+}
+
+.cell-256 {
+  background: #edcc62;
+  transition: 1s;
+}
+
+.cell-512 {
+  background: #edc950;
+  transition: 1s;
+}
+
+.cell-1024 {
+  background: #edc53f;
+  transition: 1s;
+  font-weight: 400;
+  font-size: 30px;
+}
+
+.cell-2048 {
+  background: #f6b94c;
+  transition: 1s;
+  font-weight: 400;
+  font-size: 30px;
 }
