--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,27 @@ h1 {
 .hide {
   display: none;
 }
+
+.square__section {
+  text-align: center;
+  display: none;
+}
+@media (max-width: 1440px) {
+  .square__section {
+    display: block;
+  }
+}
+
+.square__section_btn {
+  width: 80px;
+  height: 60px;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 20px;
+  border: none;
+  background-color: #bbada0;
+  color: #eee4da;
+}
 .row {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
